Add blogs - confs

--- a/_posts/2022-11-04-CFP-AAG.md
+++ b/_posts/2022-11-04-CFP-AAG.md
@@ -2,8 +2,10 @@
 layout: post
 title: CFP AAG 2023 - GeoAI and Deep Learning Symposium: Geoprivacy and Ethics in Geospatial Data and GeoAI 
 date: 2022-11-04 16:09:00-0400
-inline: false
-related_posts: false
+description: Join us in Denver, Colorado, at the American Association of Geographers (AAG) Annual Meeting! 
+tags: AAG conference GIScience GeoAI privacy research presentation  
+categories: news
+related_posts: true
 ---
 <b>Overview:</b>
 While geospatial artificial intelligence (GeoAI), along with big data and high-performance computing facilities, continuously increases the capability of modern geographic information systems, the advancement of computational technologies has also expanded the field of geoethics into a multidisciplinary study area. Among those, geoprivacy is a frequently discussed topic because of the prevalence of the privacy paradox: individuals want to leverage new technology (e.g., making friends through sharing private experiences) and also avoid unwanted consequences (e.g., targeted advertising). In this session, we invite submissions of applied, theoretical, or methods-based research on geoprivacy and geoethics in the context of GeoAI. Potential areas of study may include (but are not limited to):
