Update news - confs

--- a/_news/2021-03-12-CFP-CAG.md
+++ b/_news/2021-03-12-CFP-CAG.md
@@ -2,11 +2,10 @@
 layout: post
 title: CFP CAG 2021 - Geospatial Data Science 
 date: 2021-03-12 16:11:00-0400
-description: Join us from June 7-11 for exciting geospatial data science sessions at the Canadian Association of Geographers (CAG) Annual Conference. 
-tags: CAG conference datascience GIScience research presentations
-categories: news
-related_posts: true
+inline: false
+related_posts: false
 ---
+
 The 71st annual meeting and conference of the <a href=" https://www.cag-acg.ca/">Canadian Association of Geographers (CAG)</a> will be held virtually from June 7 to 11. Hosted by the University of Northern British Columbia, the conference will be entirely online. I will be co-organizing three geospatial data science sessions at the conference. If your work aligns with this theme, we welcome your submissions. The deadline for papers/abstracts submission is March 26th. More details on the sessions below. 
 
 ***
