--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,84 +1,171 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
+@article{zhang2023rehumanize,
   bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+  author = {Zhang, H. and McKenzie, G.},
+  year = {2023},
+  title = {Rehumanize geoprivacy: from disclosure control to human perception},
+  journal = {GeoJournal},
+  volume = {88},
+  number = {1},
+  pages = {189--208},
+  doi = {10.1007/s10708-022-10598-4},
+  url = {https://doi.org/10.1007/s10708-022-10598-4},
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
+@article{mckenzie2022privyto,
   bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+  author = {McKenzie, G. and Romm, D. and Zhang, H. and Brunila, M.},
+  year = {2022},
+  title = {PrivyTo: A privacy‐preserving location‐sharing platform},
+  journal = {Transactions in GIS},
+  volume = {26},
+  number = {4},
+  pages = {1703--1717},
+  doi = {10.1111/tgis.12924},
+  url = {https://doi.org/10.1111/tgis.12924},
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  selected={true}
-}
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@book{przibram1967letters,
+@article{zhang2018accuracy,
   bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
+  author = {Zhang, H. and Malczewski, J.},
+  year = {2018},
+  title = {Accuracy Evaluation of the Canadian OpenStreetMap Road Networks},
+  journal = {International Journal of Geospatial and Environmental Research},
+  volume = {5},
+  number = {2},
+  pages = {1},
+  url = {https://dc.uwm.edu/ijger/vol5/iss2/1},
+}
+
+@incollection{mckenzie2023privacyethics,
+  bibtex_show={true},
+  author = {McKenzie, G. and Zhang, H. and Gambs, S.},
+  year = {2023},
+  title = {Privacy and Ethics in GeoAI},
+  booktitle = {Handbook of Geospatial Artificial Intelligence},
+  editor = {Gao, S. and Hu, Y. and Li, W.},
+  publisher = {CRC Press},
+}
+
+@incollection{zhang2017qualityevaluation,
+  bibtex_show={true},
+  author = {Zhang, H. and Malczewski, J.},
+  year = {2017},
+  title = {Quality Evaluation of Volunteered Geographic Information: The Case of OpenStreetMap},
+  booktitle = {Volunteered Geographic Information and the Future of Geospatial Data},
+  editor = {Campelo, C. and Bertolotto, M. and Corcoran, P.},
+  pages = {19--46},
+  publisher = {IGI Global},
+  doi = {10.4018/978-1-5225-2446-5.ch002},
+  url = {https://doi.org/10.4018/978-1-5225-2446-5.ch002},
+}
+
+@inproceedings{mckenzie2023platialkanonymity,
+  bibtex_show={true},
+  author = {McKenzie, G. and Zhang, H.},
+  year = {2023},
+  title = {Platial k-anonymity: Improving location anonymity through temporal popularity signatures},
+  booktitle = {The 12th International Conference on Geographic Information Science (GIScience'23)},
+}
+
+@inproceedings{zhang2023placebasedprivacy,
+  bibtex_show={true},
+  author = {Zhang, H.},
+  year = {2023},
+  title = {Place-based privacy: A humanistic reflection on solitude and anonymity},
+  booktitle = {The 8th Conference on Spatial Knowledge and Information Canada (SKI'23)},
+  url = {https://osf.io/adfxv},
+}
+
+@inproceedings{zhang2022towardsplacebasedprivacy,
+  bibtex_show={true},
+  author = {Zhang, H. and McKenzie, G.},
+  year = {2022},
+  title = {Towards place-based privacy: Challenges and opportunities in the ``smart'' world},
+  booktitle = {IEEE International Symposium on Technology and Society (ISTAS'22)},
+}
+
+@inproceedings{zhang2022workshopcyberethics,
+  bibtex_show={true},
+  author = {Zhang, H. and McKenzie, G. and Tomko, M. and Egorova, E. and Kim, J.},
+  year = {2022},
+  title = {Report from the First Workshop on Cyber Ethics in Platial Research},
+  booktitle = {Proceedings of the 3rd International Symposium on Platial Information Science (PLATIAL’21)},
+  pages = {87--92},
+  doi = {10.5281/zenodo.6413003},
+  url = {https://doi.org/10.5281/zenodo.6413003},
+}
+
+@inproceedings{romm2021datahorror,
+  bibtex_show={true},
+  author = {Romm, D. and Zhang, H. and Verma, P. and McKenzie, G. and Chen, E.},
+  year = {2021},
+  title = {``Data Horror'': Mapping (Spatial) Data Privacy Violations onto a Cognitive Account of Horror},
+  booktitle = {Spatial Data Science Symposium (SDSS'21)},
+  doi = {10.25436/E23S3T},
+  url = {https://doi.org/10.25436/E23S3T},
+}
+
+@article{zhang2022phdfasttrack,
+  author = {Zhang, H.},
+  year = {2022},
+  title = {Why a PhD fast-track can be a bad idea},
+  journal = {University Affairs},
+  url = {https://www.universityaffairs.ca/opinion/the-black-hole/why-a-phd-fast-track-can-be-a-bad-idea/},
+}
+
+@article{zhang2022publicopinionanalysis,
+  author = {Zhang, H. and McKenzie, G.},
+  year = {2022},
+  title = {A spatial-temporal public opinion analysis of IP location disclosure on Chinese social media platforms using Weibo data},
+  journal = {Preprint},
+  url = {http://doi.org/10.13140/RG.2.2.23451.54561},
+}
+
+@article{zhang2020coronavirusprivacyrights,
+  author = {Zhang, H.},
+  year = {2020},
+  title = {With coronavirus containment efforts, what are the privacy rights of patients?},
+  journal = {The Conversation},
+  url = {https://theconversation.com/with-coronavirus-containment-effortswhat-are-the-privacy-rights-of-patients-131752},
+}
+
+@article{zhang2020canadiangradschool,
+  author = {Zhang, H.},
+  year = {2020},
+  title = {How to Pick the Right Canadian Grad School: A Geomatics Perspective},
+  journal = {GoGeomatics Canada},
+  url = {https://gogeomatics.ca/hey-geographers-how-to-pick-theright-canadian-grad-school-a-geomatics-perspective/},
+}
+
+@article{zhang2019phdjobs,
+  author = {Zhang, H.},
+  year = {2019},
+  title = {Should governments help PhDs get jobs? No. PhDs must be aware of employment reality},
+  journal = {Toronto Star},
+  pages = {A13},
+  url = {https://www.thestar.com/opinion/contributors/thebigdebate/2019/09/03/should-governmentshelp-phds-get-jobs.html},
+}
+
+@article{zhang2019geodatareview,
+  author = {Zhang, H.},
+  year = {2019},
+  title = {Using Geodata & Geolocation in the Social Sciences: Mapping Our Connected World by David Abernathy, Sage Publishing, London, 2017, 327 pp., paper US\$50.00 (ISBN 978-1473908185)},
+  journal = {The Canadian Geographer},
+  volume = {63},
+  number = {2},
+  pages = {e7-e8},
+  doi = {10.1111/cag.12532},
+  url = {https://doi.org/10.1111/cag.12532},
+}
+
+@thesis{zhang2017qualityassessment,
+  bibtex_show={true},
+  author = {Zhang, H.},
+  year = {2017},
+  title = {Quality Assessment of the Canadian OpenStreetMap Road Networks},
+  school = {Western University},
+  url = {https://ir.lib.uwo.ca/etd/4560/},
 }
