--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,7 +2,8 @@
 ---
 
 @article{zhang2023rehumanize,
-  bibtex_show={true},
+  bibtex_show = {true},
+  abstract = {Traditional boundaries between people are vanishing due to the rise of Internet of Things technology. Our smart devices keep us connected to the world, but also monitor our daily lives through an unprecedented amount data collection. As a result, defining privacy has become more complicated. Individuals want to leverage new technology (e.g., making friends through sharing private experiences) and also avoid unwanted consequences (e.g., targeted advertising). In the age of ubiquitous digital content, geoprivacy is unique because concerns in this area are constantly changing and context-dependent. Multiple factors influence people’s location disclosure decisions, including time, culture, demographics, spatial granularity, and trust. Existing research primarily focuses on the computational efforts of protecting geoprivacy, while the variation of geoprivacy perceptions has yet to receive adequate attention in the data science literature. In this work, we explore geoprivacy from a cognate-based perspective and tackle our changing perception of the concept from multiple angles. Our objectives are to rehumanize this field from contextual, cultural, and economic dimensions and highlight the uniqueness of geodata under the broad topic of privacy. It is essential that we understand the spatial variations of geoprivacy perceptions in the era of big data. Masking geographic coordinates can no longer fully anonymize spatial data, and targeted geoprivacy protection needs to be further investigated to improve user experience.},
   author = {Zhang, H. and McKenzie, G.},
   year = {2023},
   title = {Rehumanize geoprivacy: from disclosure control to human perception},
@@ -11,11 +12,12 @@
   number = {1},
   pages = {189--208},
   doi = {10.1007/s10708-022-10598-4},
-  url = {https://doi.org/10.1007/s10708-022-10598-4},
+  html = {https://link.springer.com/article/10.1007/s10708-022-10598-4},
 }
 
 @article{mckenzie2022privyto,
   bibtex_show={true},
+  abstract = {Concern over the privacy of our personal location is at an all-time high, yet the desire to share our lives with friends, family, and the public persists. Current methods and applications for sharing location content with the range of people in our lives are sorely lacking. Application users are often limited to sharing a single spatial resolution with all individuals, regardless of relation, and with little control over how this content is shared. Processes for sharing typically involve allowing a for-profit company access to one’s location before it can be transmitted to the intended recipient. In this work we propose a set of design goals and a design pattern for sharing personal location information that are realized through a prototype mobile web application. Our approach is built on the novel idea of obfuscated and encrypted location views, and promotes a uniquely open method for sharing. The intention of this article is to demonstrate that location sharing need not require one to expose private location information to third parties, and that methods exist to put an individual back in control of their content.},
   author = {McKenzie, G. and Romm, D. and Zhang, H. and Brunila, M.},
   year = {2022},
   title = {PrivyTo: A privacy‐preserving location‐sharing platform},
@@ -24,11 +26,12 @@
   number = {4},
   pages = {1703--1717},
   doi = {10.1111/tgis.12924},
-  url = {https://doi.org/10.1111/tgis.12924},
+  html = {https://onlinelibrary.wiley.com/doi/10.1111/tgis.12924},
 }
 
 @article{zhang2018accuracy,
-  bibtex_show={true},
+  bibtex_show = {true},
+  abstract = {Volunteered geographic information (VGI) has been applied in many fields such as participatory planning, humanitarian relief and crisis management. One of the reasons for popularity of VGI is its cost-effectiveness. However, the coverage and accuracy of VGI cannot be guaranteed. The issue of geospatial data quality in the OpenStreetMap (OSM) project has become a trending research topic because of the large size of the dataset and the multiple channels of data access. This paper focuses on a national study of the Canadian OSM road network data for the assessment of completeness, positional accuracy, attribute accuracy, semantic accuracy and lineage. The OSM road networks in Canada have generally reliable quality compared to Digital Mapping Technologies Inc. Urban areas and footways received more contributions than rural areas and motorways, and imported road segments from GeoBase have slightly better quality than the national OSM dataset. The findings of the map quality can potentially guide cartographic product selection for interested parties and offer a better understanding of future improvement of OSM quality. In addition, the study presents the OSM contributions influenced by data import and remote mapping.},
   author = {Zhang, H. and Malczewski, J.},
   year = {2018},
   title = {Accuracy Evaluation of the Canadian OpenStreetMap Road Networks},
@@ -37,6 +40,7 @@
   number = {2},
   pages = {1},
   url = {https://dc.uwm.edu/ijger/vol5/iss2/1},
+  html = {https://dc.uwm.edu/ijger/vol5/iss2/1},
 }
 
 @incollection{mckenzie2023privacyethics,
@@ -50,7 +54,8 @@
 }
 
 @incollection{zhang2017qualityevaluation,
-  bibtex_show={true},
+  bibtex_show = {true},
+  abstract = {A large amount of crowd-sourced geospatial data have been created in recent years due to the interactivity of Web 2.0 and the availability of Global Positioning System (GPS). This geo-information is typically referred to as volunteered geographic information (VGI). OpenStreetMap (OSM) is a popular VGI platform that allows users to create or edit maps using GPS-enabled devices or aerial imageries. The issue of quality of geo-information generated by OSM has become a trending research topic because of the large size of the dataset and the inapplicability of Linus' Law in a geospatial context. This chapter systematically reviews the quality evaluation process of OSM, and demonstrates a case study of London, Canada for the assessment of completeness, positional accuracy and attribute accuracy. The findings of the quality evaluation can potentially serve as a guide of cartographic product selection and provide a better understanding of the development of OSM quality over geographic space and time.},
   author = {Zhang, H. and Malczewski, J.},
   year = {2017},
   title = {Quality Evaluation of Volunteered Geographic Information: The Case of OpenStreetMap},
@@ -59,11 +64,11 @@
   pages = {19--46},
   publisher = {IGI Global},
   doi = {10.4018/978-1-5225-2446-5.ch002},
-  url = {https://doi.org/10.4018/978-1-5225-2446-5.ch002},
+  html = {https://www.igi-global.com/gateway/chapter/178797},
 }
 
 @inproceedings{mckenzie2023platialkanonymity,
-  bibtex_show={true},
+  bibtex_show = {true},
   author = {McKenzie, G. and Zhang, H.},
   year = {2023},
   title = {Platial k-anonymity: Improving location anonymity through temporal popularity signatures},
@@ -71,16 +76,19 @@
 }
 
 @inproceedings{zhang2023placebasedprivacy,
-  bibtex_show={true},
+  bibtex_show = {true},
+  abstract = {The need for privacy has long existed before the realization of modern society. Online privacy researchers seem to be surrounded by digital technologies and try creating universal privacy standards and design philosophies to help users stay anonymous. Based on Yi-Fu Tuan’s interpretation of humanistic geography, this article extends the concept of place-based privacy following an ethological perspective. A research agenda is presented in the area of geographical knowledge, territory and place, and crowding and privacy by analyzing the relationship between human, privacy, and place. The article concludes by explaining the usefulness of studying place-based privacy.},
   author = {Zhang, H.},
   year = {2023},
   title = {Place-based privacy: A humanistic reflection on solitude and anonymity},
   booktitle = {The 8th Conference on Spatial Knowledge and Information Canada (SKI'23)},
-  url = {https://osf.io/adfxv},
+  doi = {10.17605/OSF.IO/N6DU5},
+  html = {https://osf.io/adfxv},
 }
 
 @inproceedings{zhang2022towardsplacebasedprivacy,
-  bibtex_show={true},
+  bibtex_show = {true},
+  abstract = {The emergence of "smart" technologies has given rise to new interaction models merging our physical realities with our digital environments.  As a result, new privacy threats have emerged, substantially impacting both individuals and groups. In this short paper, we summarize many of the privacy challenges we face in the smart and connected world, and identify opportunities for further research. Drawing from the recent literature on geoprivacy, user-tailored privacy, and group privacy, we explore this topic through the lens of contextually aware, place-based, or platial, information analysis.},
   author = {Zhang, H. and McKenzie, G.},
   year = {2022},
   title = {Towards place-based privacy: Challenges and opportunities in the ``smart'' world},
@@ -88,24 +96,26 @@
 }
 
 @inproceedings{zhang2022workshopcyberethics,
-  bibtex_show={true},
+  bibtex_show = {true},
+  abstract = {On December 15th, 2021, the First Workshop on Cyber Ethics in Platial Research was held in Enschede, the Netherlands (virtually), in conjunction with the Third International Symposium on Platial Information Science (PLATIAL'21). The objective of this workshop was to explore the unique aspects of ethics related to place. During the workshop, invited speakers first provided a summary of their related work followed by organizers and attendees discussing the topic more broadly. With the goal of spurring an active discussion, the organizers prompted discussion through proposing the following three questions to the speakers and workshop attendees.},
   author = {Zhang, H. and McKenzie, G. and Tomko, M. and Egorova, E. and Kim, J.},
   year = {2022},
   title = {Report from the First Workshop on Cyber Ethics in Platial Research},
   booktitle = {Proceedings of the 3rd International Symposium on Platial Information Science (PLATIAL’21)},
   pages = {87--92},
   doi = {10.5281/zenodo.6413003},
-  url = {https://doi.org/10.5281/zenodo.6413003},
+  html = {https://zenodo.org/record/6413003},
 }
 
 @inproceedings{romm2021datahorror,
   bibtex_show={true},
+  abstract = {While spatial data privacy is not a new concern, recent informationtechnology developments that allow for the increased collection and alternativeuse of spatial data have brought the discussion about geoprivacy back in focus.In this work we draw a parallel between a conceptualization of horror based onwork from cognitive scientists and philosophers, and the intrusiveness of currentdata collection methods, the unauthorized use of this data, and the transgressionsmade by data stewards. By drawing this connection, we discuss the familiar topicof data privacy through a novel and jarring lens that clarifies the importance ofdata privacy and elucidates the particular importance of geoprivacy.},
   author = {Romm, D. and Zhang, H. and Verma, P. and McKenzie, G. and Chen, E.},
   year = {2021},
   title = {``Data Horror'': Mapping (Spatial) Data Privacy Violations onto a Cognitive Account of Horror},
   booktitle = {Spatial Data Science Symposium (SDSS'21)},
   doi = {10.25436/E23S3T},
-  url = {https://doi.org/10.25436/E23S3T},
+  html = {https://escholarship.org/uc/item/7902g5hh},
 }
 
 @article{zhang2022phdfasttrack,
@@ -113,15 +123,16 @@
   year = {2022},
   title = {Why a PhD fast-track can be a bad idea},
   journal = {University Affairs},
-  url = {https://www.universityaffairs.ca/opinion/the-black-hole/why-a-phd-fast-track-can-be-a-bad-idea/},
+  html = {https://www.universityaffairs.ca/opinion/the-black-hole/why-a-phd-fast-track-can-be-a-bad-idea/},
 }
 
 @article{zhang2022publicopinionanalysis,
+  abstract = {On April 28, 2022, the Chinese social media platform, Weibo implemented a new feature that automatically adds a user's location (determined by IP addresses) to all posts and comments. In this work, we analyze users' reactions to this implementation. Exploratory spatial-temporal analysis was conducted on a wide range of content with the goal of understanding the general trends and major themes of the discussion. A Latent Dirichlet Allocation (LDA) topic model was used to extract implicit topics from the discourse. Results indicate that both supporters and opponents of the mandatory location disclosure participated in the discussion, with females more involved than males. Location privacy concerns were also interpreted through hashtags and LDA-derived topics, and the variation between local and overseas Chinese opinions was compared. The findings of this study will aid policymakers in understanding public concerns about mandatory location disclosure and help developers implement privacy-aware designs in the context of contemporary China.},
   author = {Zhang, H. and McKenzie, G.},
   year = {2022},
   title = {A spatial-temporal public opinion analysis of IP location disclosure on Chinese social media platforms using Weibo data},
   journal = {Preprint},
-  url = {http://doi.org/10.13140/RG.2.2.23451.54561},
+  html = {http://doi.org/10.13140/RG.2.2.23451.54561},
 }
 
 @article{zhang2020coronavirusprivacyrights,
@@ -129,7 +140,7 @@
   year = {2020},
   title = {With coronavirus containment efforts, what are the privacy rights of patients?},
   journal = {The Conversation},
-  url = {https://theconversation.com/with-coronavirus-containment-effortswhat-are-the-privacy-rights-of-patients-131752},
+  html = {https://theconversation.com/with-coronavirus-containment-effortswhat-are-the-privacy-rights-of-patients-131752},
 }
 
 @article{zhang2020canadiangradschool,
@@ -137,7 +148,7 @@
   year = {2020},
   title = {How to Pick the Right Canadian Grad School: A Geomatics Perspective},
   journal = {GoGeomatics Canada},
-  url = {https://gogeomatics.ca/hey-geographers-how-to-pick-theright-canadian-grad-school-a-geomatics-perspective/},
+  html = {https://gogeomatics.ca/hey-geographers-how-to-pick-theright-canadian-grad-school-a-geomatics-perspective/},
 }
 
 @article{zhang2019phdjobs,
@@ -146,7 +157,7 @@
   title = {Should governments help PhDs get jobs? No. PhDs must be aware of employment reality},
   journal = {Toronto Star},
   pages = {A13},
-  url = {https://www.thestar.com/opinion/contributors/thebigdebate/2019/09/03/should-governmentshelp-phds-get-jobs.html},
+  html = {https://www.thestar.com/opinion/contributors/thebigdebate/2019/09/03/should-governmentshelp-phds-get-jobs.html},
 }
 
 @article{zhang2019geodatareview,
@@ -158,14 +169,15 @@
   number = {2},
   pages = {e7-e8},
   doi = {10.1111/cag.12532},
-  url = {https://doi.org/10.1111/cag.12532},
+  html = {https://onlinelibrary.wiley.com/doi/10.1111/cag.12532},
 }
 
 @thesis{zhang2017qualityassessment,
-  bibtex_show={true},
+  bibtex_show = {true},
+  abstract = {Volunteered geographic information (VGI) has been applied in many fields such as participatory planning, humanitarian relief and crisis management because of its cost-effectiveness. However, coverage and accuracy of VGI cannot be guaranteed. OpenStreetMap (OSM) is a popular VGI platform that allows users to create or edit maps using GPS-enabled devices or aerial imageries. The issue of geospatial data quality in OSM has become a trending research topic because of the large size of the dataset and the multiple channels of data access. The objective of this study is to examine the overall reliability of the Canadian OSM data. A systematic review is first presented to provide details on the quality evaluation process of OSM. A case study of London, Ontario is followed as an experimental analysis of completeness, positional accuracy and attribute accuracy of the OSM street networks. Next, a national study of the Canadian OSM data assesses the overall semantic accuracy and lineage in addition to the quality measures mentioned above. Results of the quality evaluation are compared with associated OSM provenance metadata to examine potential correlations. The Canadian OSM road networks were found to have comparable accuracy with the tested commercial database (DMTI). Although statistical analysis suggests that there are no significant relations between OSM accuracy and its editing history, the study presents the complex processes behind OSM contributions possibly influenced by data import and remote mapping. The findings of this thesis can potentially guide cartographic product selection for interested parties and offer a better understanding of future quality improvement in OSM.},
   author = {Zhang, H.},
   year = {2017},
   title = {Quality Assessment of the Canadian OpenStreetMap Road Networks},
   school = {Western University},
-  url = {https://ir.lib.uwo.ca/etd/4560/},
+  html = {https://ir.lib.uwo.ca/etd/4560/},
 }
