Update bib preview

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,6 +2,7 @@
 ---
 
 @article{zhang2023rehumanize,
+  abbr = {GeoJ},
   bibtex_show = {true},
   abstract = {Traditional boundaries between people are vanishing due to the rise of Internet of Things technology. Our smart devices keep us connected to the world, but also monitor our daily lives through an unprecedented amount data collection. As a result, defining privacy has become more complicated. Individuals want to leverage new technology (e.g., making friends through sharing private experiences) and also avoid unwanted consequences (e.g., targeted advertising). In the age of ubiquitous digital content, geoprivacy is unique because concerns in this area are constantly changing and context-dependent. Multiple factors influence people’s location disclosure decisions, including time, culture, demographics, spatial granularity, and trust. Existing research primarily focuses on the computational efforts of protecting geoprivacy, while the variation of geoprivacy perceptions has yet to receive adequate attention in the data science literature. In this work, we explore geoprivacy from a cognate-based perspective and tackle our changing perception of the concept from multiple angles. Our objectives are to rehumanize this field from contextual, cultural, and economic dimensions and highlight the uniqueness of geodata under the broad topic of privacy. It is essential that we understand the spatial variations of geoprivacy perceptions in the era of big data. Masking geographic coordinates can no longer fully anonymize spatial data, and targeted geoprivacy protection needs to be further investigated to improve user experience.},
   author = {Zhang, H. and McKenzie, G.},
@@ -16,6 +17,7 @@
 }
 
 @article{mckenzie2022privyto,
+  abbr = {TGIS},
   bibtex_show={true},
   abstract = {Concern over the privacy of our personal location is at an all-time high, yet the desire to share our lives with friends, family, and the public persists. Current methods and applications for sharing location content with the range of people in our lives are sorely lacking. Application users are often limited to sharing a single spatial resolution with all individuals, regardless of relation, and with little control over how this content is shared. Processes for sharing typically involve allowing a for-profit company access to one’s location before it can be transmitted to the intended recipient. In this work we propose a set of design goals and a design pattern for sharing personal location information that are realized through a prototype mobile web application. Our approach is built on the novel idea of obfuscated and encrypted location views, and promotes a uniquely open method for sharing. The intention of this article is to demonstrate that location sharing need not require one to expose private location information to third parties, and that methods exist to put an individual back in control of their content.},
   author = {McKenzie, G. and Romm, D. and Zhang, H. and Brunila, M.},
@@ -30,6 +32,7 @@
 }
 
 @article{zhang2018accuracy,
+  abbr = {IJGER},
   bibtex_show = {true},
   abstract = {Volunteered geographic information (VGI) has been applied in many fields such as participatory planning, humanitarian relief and crisis management. One of the reasons for popularity of VGI is its cost-effectiveness. However, the coverage and accuracy of VGI cannot be guaranteed. The issue of geospatial data quality in the OpenStreetMap (OSM) project has become a trending research topic because of the large size of the dataset and the multiple channels of data access. This paper focuses on a national study of the Canadian OSM road network data for the assessment of completeness, positional accuracy, attribute accuracy, semantic accuracy and lineage. The OSM road networks in Canada have generally reliable quality compared to Digital Mapping Technologies Inc. Urban areas and footways received more contributions than rural areas and motorways, and imported road segments from GeoBase have slightly better quality than the national OSM dataset. The findings of the map quality can potentially guide cartographic product selection for interested parties and offer a better understanding of future improvement of OSM quality. In addition, the study presents the OSM contributions influenced by data import and remote mapping.},
   author = {Zhang, H. and Malczewski, J.},
@@ -51,6 +54,7 @@
   booktitle = {Handbook of Geospatial Artificial Intelligence},
   editor = {Gao, S. and Hu, Y. and Li, W.},
   publisher = {CRC Press},
+  preview={geoai-book.jpg},
 }
 
 @incollection{zhang2017qualityevaluation,
@@ -65,55 +69,61 @@
   publisher = {IGI Global},
   doi = {10.4018/978-1-5225-2446-5.ch002},
   html = {https://www.igi-global.com/gateway/chapter/178797},
+  preview={vgi-book.jpg},
 }
 
 @inproceedings{mckenzie2023platialkanonymity,
+  abbr = {GIScience'23},
   bibtex_show = {true},
   author = {McKenzie, G. and Zhang, H.},
   year = {2023},
   title = {Platial k-anonymity: Improving location anonymity through temporal popularity signatures},
-  booktitle = {The 12th International Conference on Geographic Information Science (GIScience'23)},
+  booktitle = {The 12th International Conference on Geographic Information Science},
 }
 
 @inproceedings{zhang2023placebasedprivacy,
+  abbr = {SKI'23},
   bibtex_show = {true},
   abstract = {The need for privacy has long existed before the realization of modern society. Online privacy researchers seem to be surrounded by digital technologies and try creating universal privacy standards and design philosophies to help users stay anonymous. Based on Yi-Fu Tuan’s interpretation of humanistic geography, this article extends the concept of place-based privacy following an ethological perspective. A research agenda is presented in the area of geographical knowledge, territory and place, and crowding and privacy by analyzing the relationship between human, privacy, and place. The article concludes by explaining the usefulness of studying place-based privacy.},
   author = {Zhang, H.},
   year = {2023},
   title = {Place-based privacy: A humanistic reflection on solitude and anonymity},
-  booktitle = {The 8th Conference on Spatial Knowledge and Information Canada (SKI'23)},
+  booktitle = {The 8th Conference on Spatial Knowledge and Information Canada},
   doi = {10.17605/OSF.IO/N6DU5},
   html = {https://osf.io/adfxv},
 }
 
 @inproceedings{zhang2022towardsplacebasedprivacy,
+  abbr = {ISTAS'22},
   bibtex_show = {true},
   abstract = {The emergence of "smart" technologies has given rise to new interaction models merging our physical realities with our digital environments.  As a result, new privacy threats have emerged, substantially impacting both individuals and groups. In this short paper, we summarize many of the privacy challenges we face in the smart and connected world, and identify opportunities for further research. Drawing from the recent literature on geoprivacy, user-tailored privacy, and group privacy, we explore this topic through the lens of contextually aware, place-based, or platial, information analysis.},
   author = {Zhang, H. and McKenzie, G.},
   year = {2022},
   title = {Towards place-based privacy: Challenges and opportunities in the ``smart'' world},
-  booktitle = {IEEE International Symposium on Technology and Society (ISTAS'22)},
+  booktitle = {IEEE International Symposium on Technology and Society},
 }
 
 @inproceedings{zhang2022workshopcyberethics,
+  abbr = {PLATIAL'21},
   bibtex_show = {true},
   abstract = {On December 15th, 2021, the First Workshop on Cyber Ethics in Platial Research was held in Enschede, the Netherlands (virtually), in conjunction with the Third International Symposium on Platial Information Science (PLATIAL'21). The objective of this workshop was to explore the unique aspects of ethics related to place. During the workshop, invited speakers first provided a summary of their related work followed by organizers and attendees discussing the topic more broadly. With the goal of spurring an active discussion, the organizers prompted discussion through proposing the following three questions to the speakers and workshop attendees.},
   author = {Zhang, H. and McKenzie, G. and Tomko, M. and Egorova, E. and Kim, J.},
   year = {2022},
   title = {Report from the First Workshop on Cyber Ethics in Platial Research},
-  booktitle = {Proceedings of the 3rd International Symposium on Platial Information Science (PLATIAL’21)},
+  booktitle = {Proceedings of the 3rd International Symposium on Platial Information Science},
   pages = {87--92},
   doi = {10.5281/zenodo.6413003},
   html = {https://zenodo.org/record/6413003},
 }
 
 @inproceedings{romm2021datahorror,
+  abbr = {SDSS'21},
   bibtex_show={true},
   abstract = {While spatial data privacy is not a new concern, recent informationtechnology developments that allow for the increased collection and alternativeuse of spatial data have brought the discussion about geoprivacy back in focus.In this work we draw a parallel between a conceptualization of horror based onwork from cognitive scientists and philosophers, and the intrusiveness of currentdata collection methods, the unauthorized use of this data, and the transgressionsmade by data stewards. By drawing this connection, we discuss the familiar topicof data privacy through a novel and jarring lens that clarifies the importance ofdata privacy and elucidates the particular importance of geoprivacy.},
   author = {Romm, D. and Zhang, H. and Verma, P. and McKenzie, G. and Chen, E.},
   year = {2021},
   title = {``Data Horror'': Mapping (Spatial) Data Privacy Violations onto a Cognitive Account of Horror},
-  booktitle = {Spatial Data Science Symposium (SDSS'21)},
+  booktitle = {Spatial Data Science Symposium},
   doi = {10.25436/E23S3T},
   html = {https://escholarship.org/uc/item/7902g5hh},
 }
@@ -127,6 +137,7 @@
 }
 
 @article{zhang2022publicopinionanalysis,
+  abbr = {AAG'23},
   abstract = {On April 28, 2022, the Chinese social media platform, Weibo implemented a new feature that automatically adds a user's location (determined by IP addresses) to all posts and comments. In this work, we analyze users' reactions to this implementation. Exploratory spatial-temporal analysis was conducted on a wide range of content with the goal of understanding the general trends and major themes of the discussion. A Latent Dirichlet Allocation (LDA) topic model was used to extract implicit topics from the discourse. Results indicate that both supporters and opponents of the mandatory location disclosure participated in the discussion, with females more involved than males. Location privacy concerns were also interpreted through hashtags and LDA-derived topics, and the variation between local and overseas Chinese opinions was compared. The findings of this study will aid policymakers in understanding public concerns about mandatory location disclosure and help developers implement privacy-aware designs in the context of contemporary China.},
   author = {Zhang, H. and McKenzie, G.},
   year = {2022},
